--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server db.json --watch --port 3000"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
